@@ -1,4 +1,5 @@
 3.4.0 2020xxxx
+  BF: Service: Optimization of the overlay technique for header and footer
   CR: Project: Migration to Maven
   CR: Project: Migration to GitHub
   CR: License: Migration to Apache License 2.0
